--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gltf-renderer",
-  "version": "0.0.1",
+  "version": "0.0.1-dev",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -13,9 +13,9 @@
       "import": "./dist/gltf-renderer/gltf-renderer.esm.js",
       "require": "./dist/gltf-renderer/gltf-renderer.cjs.js"
     },
-    "./my-component": {
-      "import": "./dist/components/my-component.js",
-      "types": "./dist/components/my-component.d.ts"
+    "./gltf-renderer": {
+      "import": "./dist/components/gltf-renderer.js",
+      "types": "./dist/components/gltf-renderer.d.ts"
     },
     "./loader": {
       "import": "./loader/index.js",
@@ -42,9 +42,14 @@
     "@stencil/core": "^4.7.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^16.18.11",
+    "@types/three": "^0.168.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "puppeteer": "^21.9.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "deepmerge": "^4.3.1",
+    "three": "^0.168.0"
+  }
 }
