--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "paths": {
+      "three/webgpu": ["./node_modules/@types/three/build/three.webgpu.d.ts"]
+    },
   },
   "include": [
     "src"
