--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "deep-equal": "^2.2.3",
     "deepmerge": "^4.3.1",
     "three": "^0.168.0"
   }
